# test-compressed-program

./: .env  Anchor.toml  README.md  package-lock.json  package.json
programs/test-123/: Cargo.toml
programs/test-123/src/: lib.rs
programs/test-123/tests/: test.rs
tests/: test.ts
