[package]
name = "test-123"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_123"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-sbf = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
light-hasher = { path = "../../../light-protocol2/program-libs/hasher", features = [
    "solana",
] }
light-sdk = { path = "../../../light-protocol2/sdk-libs/sdk", features = [
    "anchor",
    "idl-build",
] }
