[package]
name = "test-123"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_123"

[features]
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-sbf = []
[dependencies]
anchor-lang = "0.31.1"
light-sdk = { version = "0.12.0", features = ["anchor"] }
light-hasher = { version = "3.0.0", features = ["solana"] }
